dokuwiki/configmap-dokuwiki.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 3htp-dokuwiki
