dokuwiki/deployment-dokuwiki-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dokuwiki-app
  namespace: 3htp-dokuwiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dokuwiki-app
  template:
    metadata:
      labels:
        app: dokuwiki-app
    spec:
      containers:
      - image: 369595298303.dkr.ecr.us-east-2.amazonaws.com/dokuwiki:app
        resources:
          limits:
            memory: "512Mi"
            cpu: "300m"
          requests: 
            memory: "256Mi"
            cpu: "10m"
        name: dokuwiki-app
        securityContext:
          runAsUser: 0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app-storage
          mountPath: /var/www/html/dokuwiki/data
      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: dokuwiki-app-pvc
