dokuwiki/service-dokuwiki.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-dokuwiki-db
  namespace: 3htp-dokuwiki
spec:
  type: ClusterIP
  selector:
    app: dokuwiki-db
  ports:
  - protocol: TCP
    port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: service-dokuwiki-app
  namespace: 3htp-dokuwiki
spec:
  type: ClusterIP
  selector:
    app: dokuwiki-app
  ports:
  - port: 8080
    targetPort: 80
#    nodePort: 30080
